--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -20,7 +20,7 @@
     <h4>Created at {{post.created_at}}</h4>
     <p>Email: {{post.email}}</p>
     <p>Content: {{post.content}}</p>
-    <button type="delete" onClick="deletePost(post)">Delete Post</button>
+    <button type="delete" onClick="deletePost(post.id)">Delete Post</button>
   </div>
   {% endfor %}
 
@@ -52,8 +52,8 @@
   <script>
     function deletePost(id) { 
       post = document.getElementById("post"); 
-      url = "/api/timeline_post/" + post.id + "/"; 
-      console.log("Post id: " + post.id); 
+      url = "/api/timeline_post/" + id + "/"; 
+      console.log("id: " + id); 
       fetch (url, { 
         method: "DELETE", 
       })
