--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -20,7 +20,7 @@
     <h4>Created at {{post.created_at}}</h4>
     <p>Email: {{post.email}}</p>
     <p>Content: {{post.content}}</p>
-    <button type="delete" onClick="deletePost(post.id)">Delete Post</button>
+    <button type="delete" onClick="deletePost({{post.id}})">Delete Post</button>
   </div>
   {% endfor %}
 
