id is not coming up as undefined but there is still a 404 error

--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -52,7 +52,7 @@
   <script>
     function deletePost(id) { 
       post = document.getElementById("post"); 
-      url = "/api/timeline_post/" + id + "/"; 
+      url = "/api/timeline_post/" + id; 
       console.log("id: " + id); 
       fetch (url, { 
         method: "DELETE", 
