--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -60,6 +60,7 @@
       // .then ((res) => res.json())
       .then ((data) => { 
         console.log(data); 
+        location.reload(); 
       })
       .catch((err) => console.log(err)); 
     }
