--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -53,16 +53,16 @@
     function deletePost(id) { 
       post = document.getElementById("post"); 
       url = "/api/timeline_post/" + id; 
-      console.log("id: " + id); 
+      console.log("Deleting post. Id = " + id); 
       fetch (url, { 
         method: "DELETE", 
       })
       // .then ((res) => res.json())
       .then ((data) => { 
         console.log(data); 
-        // location.reload(); 
       })
       .catch((err) => console.log(err)); 
+      location.reload();
     }
   </script>
 
