--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -60,9 +60,10 @@
       // .then ((res) => res.json())
       .then ((data) => { 
         console.log(data); 
+        location.reload(); 
+        window.location.reload(); 
       })
       .catch((err) => console.log(err)); 
-      location.reload();
     }
   </script>
 
