--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -16,7 +16,7 @@
 
   {% for post in posts %}
   <div id="post" class="card">
-    <button type="delete" onClick="deletePost({{post.id}})" style="float:right">X</button>
+    <button type="delete" onClick="deletePost({{post.id}})" style="float:right; opacity:0.5;"><b>X</b></button>
     <h3>Post by {{post.name}}</h3>
     <h4>Created at {{post.created_at}}</h4>
     <p>Email: {{post.email}}</p>
