--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -16,11 +16,11 @@
 
   {% for post in posts %}
   <div id="post" class="card">
-    <button type="delete" onClick="deletePost({{post.id}})" style="float:right; opacity:0.5;"><b>X</b></button>
     <h3>Post by {{post.name}}</h3>
     <h4>Created at {{post.created_at}}</h4>
     <p>Email: {{post.email}}</p>
     <p>Content: {{post.content}}</p>
+    <button type="delete" onClick="deletePost({{post.id}})" style="align-self:center"><b>X</b></button>
   </div>
   {% endfor %}
 
