changed button to say 'Delete Post' instead of 'X'

--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -20,7 +20,7 @@
     <h4>Created at {{post.created_at}}</h4>
     <p>Email: {{post.email}}</p>
     <p>Content: {{post.content}}</p>
-    <button type="delete" onClick="deletePost({{post.id}})" style="align-self:center"><b>X</b></button>
+    <button type="delete" onClick="deletePost({{post.id}})"><b>Delete Post</b></button>
   </div>
   {% endfor %}
 
