changed background color to cream and font color to red

--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -4,6 +4,7 @@ p, h1, h2, h3, h4, h5, h6, button {
     /* font-family: 'Nunito', sans-serif; */
     /* font-family: 'Ubuntu', sans-serif; */
     font-family: 'Manrope', sans-serif;
+    color: rgb(139, 0,0); 
 }
 
 h1 { 
@@ -12,7 +13,8 @@ h1 {
 }
 
 body {
-    background-image: linear-gradient(to right, pink, #FFFF8F);
+    /* background-image: linear-gradient(to right, pink, #FFFF8F); */
+    background-color: antiquewhite;
     background-size: cover;
     overflow-x: scroll;
     font-family: "Ubuntu", sans-serif;
@@ -39,9 +41,9 @@ body {
     font-size: 20px; 
     border-radius: 6px;
     text-align: center;
-    border: 2px solid black;
+    border: 2px solid rgb(139, 0,0)
     outline: 1px; 
-    color: #0e0000;
+    color: rgb(139, 0,0); 
 }
 
 /* *********** FOR HOMEPAGE *********** */
