--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -41,7 +41,7 @@ body {
     font-size: 20px; 
     border-radius: 6px;
     text-align: center;
-    border: 2px solid rgb(139, 0,0)
+    border: 2px solid rgb(139, 0,0); 
     outline: 1px; 
     color: rgb(139, 0,0); 
 }
