working on a rebranding of the website

--- a/app/templates/education.html
+++ b/app/templates/education.html
@@ -2,8 +2,9 @@
 {%block content%}
 <div class="education">
     <h1> Education </h1>
+    <p> Currently Under Reconstruction. Check back later for an updated page! </p> 
 
-    <div class="card">
+    <!-- <div class="card">
         <img src="static/img/portfolio-bu.png" alt="Boston U" style="width:100%">
         <div class="container">
           <h4><b>Boston University</b></h4>
@@ -17,6 +18,6 @@
         <h4><b>Stuyvesant High School</b></h4>
         <p> Class of 2020 <br> GPA: 3.70</p> 
       </div>
-  </div>
+  </div> -->
 </div>
 {%endblock%}
