--- a/app/templates/experience.html
+++ b/app/templates/experience.html
@@ -2,7 +2,8 @@
 {%block content%}
 <div class="experience">
     <h1> Work Experience </h1>
-    <div class="entry-outer">
+    <p> Currently Under Reconstruction. Check back later for an updated page! </p> 
+    <!-- <div class="entry-outer">
         <div class="card">
             <p style="font-size:25px"> Quadruped Robot | Boston University </p>
             <p style="font-size:20px"> September 2021 - present </p>
@@ -54,6 +55,6 @@
             <p style="font-size:15px"> <i>Sales Associate</i> </p>
             <p> Organized merchandise, recommended products, and got customers excited about their purchases.</p>
         </div>
-    </div>
+    </div> -->
 </div>
 {%endblock%}
