--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -1,6 +1,7 @@
 {%extends "navlayout.html"%} 
 {%block content%}
 <div class="timeline">
+  <!-- Remodeled into a Feedback page  -->
   <form id="form" name="timelineForm">
     <label for="name"> Name </label>
     <input name="name" type="text" id="name" />
