--- a/app/templates/navlayout.html
+++ b/app/templates/navlayout.html
@@ -28,10 +28,10 @@
           <ul>
             <li><a href="{{ url_for('index')}}">Home</a></li>
             <li><a href="{{ url_for('workExp')}}">Experience</a></li>
-            <li><a href="{{ url_for('hobbies')}}">Hobbies</a></li>
+            <!-- <li><a href="{{ url_for('hobbies')}}">Hobbies</a></li> -->
             <li><a href="{{ url_for('education')}}">Education</a></li>
-            <li><a href="{{ url_for('myMap')}}">Map</a></li>
-            <li><a href="{{ url_for('timeline')}}">Timeline</a></li>
+            <!-- <li><a href="{{ url_for('myMap')}}">Map</a></li> -->
+            <li><a href="{{ url_for('timeline')}}"> Feedback </a></li>
           </ul>
         </nav>
       </div>
