--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,25 +1,100 @@
-{%extends "navlayout.html"%}
-{%block content%}
-<div class="home">
-    <!-- <div class="home-img"> -->
-        <!-- <img src="static/img/Maisha Headshot.jpg" alt="profile picture" width = 75% height = 75% aling="center" border-radius=50%> -->
-    <!-- </div>  -->
-    <img src="static/img/Maisha Headshot.jpg" alt="profile picture">
-    <div class="home-content">
-        <!-- <img src="static/img/Maisha Headshot.jpg" alt="profile picture"> -->
-        <h1> Maisha Miah </h1>
-        <p> 
-            Hello and welcome to my portfolio! My name is Maisha (Ma-ee-sha) and <br>
-            I’m a current student at Boston University. I plan on majoring <br>
-            in Computer Science & Statistics and minoring in Economics. I was <br>
-            born and raised in New York City but love going to school in <br>
-            Boston! I'm a big fan of exploring and I’m always looking to <br>
-            learn new things.
-        </p>
-        <p style="font-size: 15px; padding-top: 50px"> 
-            Click on the toolbar above to find out more about me. 
-        </p>
-    </div>
-</div>
+<!DOCTYPE html>
+<html> 
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+        <meta name="viewport" content="width=device-width, intiial-scale=1.0">
+        <title> Maisha's Portfolio Website </title>
+        <link rel="stylesheet" href="../static/styles/style.css">
+    </head>
 
-{%endblock%}
+    <body> 
+        <header>
+            <nav class="navigation">
+                <a href="#"> Welcome! </a>
+                <a href="#"> Personal Background </a>
+                <a href="#"> Experience </a>
+                <a href="#"> Projects </a>
+                <a href="#"> Contact </a>
+            </nav>
+        </header>
+
+        <section class="parallax"> 
+            <img src="hill1.png" id="hill1"> 
+            <img src="hill2.png" id="hill2"> 
+            <img src="hill3.png" id="hill3"> 
+            <img src="hill4.png" id="hill4">
+            <h2 id="text"> Parallax Website </h2>
+            <img src="hill5.png" id="hill5">
+            <img src="tree.png" id="tree"> 
+            <img src="leaf.png" id="leaf"> 
+            <img src="plant.png" id="plant">  
+        </section>
+
+        <section class="background">
+            <h2> A Little About Me </h2>
+            <p> 
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere 
+                tellus vitae sagittis dictum. Mauris nec placerat metus, vel suscipit dolor. 
+                Pellentesque luctus sapien velit, nec molestie erat bibendum sed. Phasellus 
+                vel sapien id lorem laoreet blandit. Quisque at metus eget nibh convallis 
+                aliquet. Fusce tempus imperdiet tellus, pulvinar aliquam ex fermentum eu. 
+                Sed convallis suscipit tempus. Phasellus tincidunt porta erat eget ultrices. 
+                Mauris sollicitudin turpis quis sodales facilisis. Morbi ut magna in lorem 
+                lacinia commodo sit amet et ligula. Nam vehicula odio at dapibus congue. Nunc 
+                dapibus faucibus massa, eget aliquet erat molestie in. Nam porta sagittis nunc, 
+                vitae dignissim tortor fringilla in.
+            </p>
+        </section>
+
+        <section class="experience">
+            <h2> Skills and Experience </h2>
+            <p> 
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere 
+                tellus vitae sagittis dictum. Mauris nec placerat metus, vel suscipit dolor. 
+                Pellentesque luctus sapien velit, nec molestie erat bibendum sed. Phasellus 
+                vel sapien id lorem laoreet blandit. Quisque at metus eget nibh convallis 
+                aliquet. Fusce tempus imperdiet tellus, pulvinar aliquam ex fermentum eu. 
+                Sed convallis suscipit tempus. Phasellus tincidunt porta erat eget ultrices. 
+                Mauris sollicitudin turpis quis sodales facilisis. Morbi ut magna in lorem 
+                lacinia commodo sit amet et ligula. Nam vehicula odio at dapibus congue. Nunc 
+                dapibus faucibus massa, eget aliquet erat molestie in. Nam porta sagittis nunc, 
+                vitae dignissim tortor fringilla in.
+            </p>
+        </section>
+
+        <section class="projects">
+            <h2> Projects </h2>
+            <p> 
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere 
+                tellus vitae sagittis dictum. Mauris nec placerat metus, vel suscipit dolor. 
+                Pellentesque luctus sapien velit, nec molestie erat bibendum sed. Phasellus 
+                vel sapien id lorem laoreet blandit. Quisque at metus eget nibh convallis 
+                aliquet. Fusce tempus imperdiet tellus, pulvinar aliquam ex fermentum eu. 
+                Sed convallis suscipit tempus. Phasellus tincidunt porta erat eget ultrices. 
+                Mauris sollicitudin turpis quis sodales facilisis. Morbi ut magna in lorem 
+                lacinia commodo sit amet et ligula. Nam vehicula odio at dapibus congue. Nunc 
+                dapibus faucibus massa, eget aliquet erat molestie in. Nam porta sagittis nunc, 
+                vitae dignissim tortor fringilla in.
+            </p>
+        </section>
+
+        <section class="contact">
+            <h2> Get in Touch! </h2>
+            <p> 
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere 
+                tellus vitae sagittis dictum. Mauris nec placerat metus, vel suscipit dolor. 
+                Pellentesque luctus sapien velit, nec molestie erat bibendum sed. Phasellus 
+                vel sapien id lorem laoreet blandit. Quisque at metus eget nibh convallis 
+                aliquet. Fusce tempus imperdiet tellus, pulvinar aliquam ex fermentum eu. 
+                Sed convallis suscipit tempus. Phasellus tincidunt porta erat eget ultrices. 
+                Mauris sollicitudin turpis quis sodales facilisis. Morbi ut magna in lorem 
+                lacinia commodo sit amet et ligula. Nam vehicula odio at dapibus congue. Nunc 
+                dapibus faucibus massa, eget aliquet erat molestie in. Nam porta sagittis nunc, 
+                vitae dignissim tortor fringilla in.
+            </p>
+        </section>
+
+        <script src="script.js"></script>
+    </body>
+</html>
