--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,22 +5,64 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
         <meta name="viewport" content="width=device-width, intiial-scale=1.0">
         <title> Maisha's Portfolio Website </title>
-        <link rel="stylesheet" href="../static/styles/style.css">
+        <link rel="stylesheet" href="../static/styles/style.css" type="text/css">
+        <script src="https://kit.fontawesome.com/f0df8f6371.js" crossorigin="anonymous"></script>
     </head>
 
     <body> 
         <header>
             <nav class="navigation">
-                <a href="#"> Welcome! </a>
-                <a href="#"> Personal Background </a>
+                <a href="#"> Home </a>
+                <a href="#"> Intro </a>
+                <a href="#"> Skills </a>
                 <a href="#"> Experience </a>
                 <a href="#"> Projects </a>
                 <a href="#"> Contact </a>
+
+
+                <ul>
+                    <li><a href="#">
+                            <i class="fa-solid fa-house-chimney" style="color: #000000;"></i>
+                            <br>
+                            Home 
+                        </a>
+                    </li>
+                    <li><a href="#">
+                            <i class="fa-solid fa-user" style="color: #000000;"></i>
+                            <br>
+                            Intro
+                        </a>
+                    </li>
+                    <li><a href="#">
+                            <i class="fa-solid fa-screwdriver-wrench" style="color: #000000;"></i>
+                            <br>
+                            Skills 
+                        </a>
+                    </li>
+                    <li><a href="#">
+                            <i class="fa-solid fa-briefcase" style="color: #000000;"></i>
+                            <br>
+                            Experience 
+                        </a>
+                    </li>
+                    <li><a href="#">
+                            <i class="fa-solid fa-gamepad" style="color: #000000;"></i>
+                            <br>
+                            Projects 
+                        </a>
+                    </li>
+                    <li><a href="#">
+                            <i class="fa-regular fa-address-card" style="color: #000000;"></i>
+                            <br>
+                            Contact 
+                        </a>
+                    </li>
+                </ul>
             </nav>
         </header>
 
         <section class="parallax"> 
-            <img src="hill1.png" id="hill1"> 
+            <img src="../static/img/cloudes" id="cloud1"> 
             <img src="hill2.png" id="hill2"> 
             <img src="hill3.png" id="hill3"> 
             <img src="hill4.png" id="hill4">
