finished styling nav bar

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,48 +12,34 @@
     <body> 
         <header>
             <nav class="navigation">
-                <a href="#"> Home </a>
-                <a href="#"> Intro </a>
-                <a href="#"> Skills </a>
-                <a href="#"> Experience </a>
-                <a href="#"> Projects </a>
-                <a href="#"> Contact </a>
-
-
                 <ul>
                     <li><a href="#">
-                            <i class="fa-solid fa-house-chimney" style="color: #000000;"></i>
-                            <br>
+                            <i class="fa-solid fa-house-chimney"></i>                            
                             Home 
                         </a>
                     </li>
                     <li><a href="#">
-                            <i class="fa-solid fa-user" style="color: #000000;"></i>
-                            <br>
+                            <i class="fa-solid fa-user"></i>                            
                             Intro
                         </a>
                     </li>
                     <li><a href="#">
-                            <i class="fa-solid fa-screwdriver-wrench" style="color: #000000;"></i>
-                            <br>
+                            <i class="fa-solid fa-screwdriver-wrench"></i>                            
                             Skills 
                         </a>
                     </li>
                     <li><a href="#">
-                            <i class="fa-solid fa-briefcase" style="color: #000000;"></i>
-                            <br>
+                            <i class="fa-solid fa-briefcase"></i>                            
                             Experience 
                         </a>
                     </li>
                     <li><a href="#">
-                            <i class="fa-solid fa-gamepad" style="color: #000000;"></i>
-                            <br>
+                            <i class="fa-solid fa-gamepad"></i>
                             Projects 
                         </a>
                     </li>
                     <li><a href="#">
-                            <i class="fa-regular fa-address-card" style="color: #000000;"></i>
-                            <br>
+                            <i class="fa-regular fa-address-card"></i>
                             Contact 
                         </a>
                     </li>
