--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -4,41 +4,60 @@
     margin: 0; 
     padding: 0; 
     box-sizing: border-box; 
-    font-family: 'Poppins', sans-serif; 
+    font-family: 'Barlow Condensed', sans-serif; 
 }
 
 body { 
-    background: #f9f9f9; 
+    background: #ececee; 
     min-height: 100vh; 
     overflow-x: hidden; 
 }
 
-header { 
-    position: absolute; 
-    top: 0; 
-    left: 0; 
-    width: 100%; 
-    padding: 30px 100px; 
-    display: flex; 
-    justify-content: flex-start; 
-    align-items: center;
-    z-index: 100;
+/* * * * * * * * * * * * * * * * * NAV BAR START * * * * * * * * * * * * * * * * */ 
+.navigation {
+    display: flex;
+    justify-content: center;
 }
 
-.navigation a { 
-    text-decoration: none; 
-    color: #359381; 
+.navigation ul {
+    list-style: none;
+    padding: 0;
+    margin: 25px;
+    display: flex;
+    justify-content: center;
+}
+
+.navigation li {
+    text-align: center;
+    margin: 0 10px;
+}
+
+.navigation a {
+    text-decoration: none;
+    color: #000000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 6px 15px; 
-    border-radius: 20px; 
-    margin: 0 10px; 
-    font-weight: 600; 
+    border-radius: 8px; 
+    font-family: 'Barlow Condensed', sans-serif; /* Set the font family */
+    font-size: 18px; /* Adjust the font size */
+}
+
+.navigation i {
+    font-size: 20px;
+    margin-bottom: 8px;
+    margin-top: 5px; 
 }
 
 .navigation a:hover, 
 .navigation a.active {
-    background: #359381; 
-    color: #f9f9f9;
+    background: #000000; 
+    color: #ececec;
+    font-weight: bold; 
 }
+
+/* * * * * * * * * * * * * * * * * NAV BAR END * * * * * * * * * * * * * * * * */ 
 
 .parallax { 
     position: relative; 
