--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, intiial-scale=1.0">
         <title> Maisha's Portfolio Website </title>
         <link rel="stylesheet" href="../static/styles/style.css" type="text/css">
+        <link rel="icon" href="../static/img/favicon.png"> 
         <script src="https://kit.fontawesome.com/f0df8f6371.js" crossorigin="anonymous"></script>
     </head>
 
@@ -48,15 +49,14 @@
         </header>
 
         <section class="parallax"> 
-            <img src="../static/img/cloudes" id="cloud1"> 
-            <img src="hill2.png" id="hill2"> 
-            <img src="hill3.png" id="hill3"> 
-            <img src="hill4.png" id="hill4">
-            <h2 id="text"> Parallax Website </h2>
-            <img src="hill5.png" id="hill5">
-            <img src="tree.png" id="tree"> 
-            <img src="leaf.png" id="leaf"> 
-            <img src="plant.png" id="plant">  
+            <img src="../static/img/HomepageBuildings.svg" class='buildings' id="buildings"> 
+            <!-- <img src="../static/img/ProfilePic.png" id="pfp">  -->
+            <br>
+            <div id="scrolldown"> 
+                <img src="../static/img/ProfilePic.svg" class="pfp">
+                <h2 id="welcome"> Welcome </h2>
+                <p id="scrollmsg"> <i class="fa-solid fa-angles-down" style="color: #000000;"></i> Scroll down to learn more about me! </p>
+            </div>  
         </section>
 
         <section class="background">
