--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -57,25 +57,40 @@
                 <h2 id="welcome"> Welcome </h2>
                 <p id="scrollmsg"> <i class="fa-solid fa-angles-down" style="color: #000000;"></i> Scroll down to learn more about me! </p>
             </div>  
+            <div id="divider"> </div>
         </section>
+
+        <!-- <section class="background">
+            <img src="../static/img/ProfilePic.svg" class="pfp">
+            <h2 id="background-hello"> Hello </h2>
+            <p> 
+                I'm Maisha and welcome to my NYC-theme virtual portolio! If you can't tell, I was born and raised in New York City, which has left a large influence on who I am today. 
+                <br> 
+                This portfolio will walk through my skills, experiences, and projects that I have worked on. 
+                <br> 
+                It is currently in the works, so make sure to stop by for updates! 
+                <br> 
+                In the meantime, visit <a>www.github.com/mmiah00</a> to check out some of my work. 
+            </p>
+        </section> -->
 
         <section class="background">
-            <h2> A Little About Me </h2>
-            <p> 
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere 
-                tellus vitae sagittis dictum. Mauris nec placerat metus, vel suscipit dolor. 
-                Pellentesque luctus sapien velit, nec molestie erat bibendum sed. Phasellus 
-                vel sapien id lorem laoreet blandit. Quisque at metus eget nibh convallis 
-                aliquet. Fusce tempus imperdiet tellus, pulvinar aliquam ex fermentum eu. 
-                Sed convallis suscipit tempus. Phasellus tincidunt porta erat eget ultrices. 
-                Mauris sollicitudin turpis quis sodales facilisis. Morbi ut magna in lorem 
-                lacinia commodo sit amet et ligula. Nam vehicula odio at dapibus congue. Nunc 
-                dapibus faucibus massa, eget aliquet erat molestie in. Nam porta sagittis nunc, 
-                vitae dignissim tortor fringilla in.
-            </p>
+            <div class="background-content">
+                <img src="../static/img/ProfilePic.svg" class="background-pfp">
+                <div class="background-text">
+                    <p>
+                        I'm Maisha and welcome to my NYC-theme virtual portfolio! If you can't tell, I was born and raised in New York City, which has left a large influence on who I am today.
+                        
+                        This portfolio will walk through my skills, experiences, and projects that I have worked on.
+                        
+                        It is currently in the works, so make sure to stop by for updates!
+                    </p>
+                </div>
+            </div>
         </section>
+        
 
-        <section class="experience">
+        <!-- <section class="experience">
             <h2> Skills and Experience </h2>
             <p> 
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere 
@@ -121,7 +136,7 @@
                 dapibus faucibus massa, eget aliquet erat molestie in. Nam porta sagittis nunc, 
                 vitae dignissim tortor fringilla in.
             </p>
-        </section>
+        </section> -->
 
         <script src="script.js"></script>
     </body>
