finished intro section

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="../static/styles/style.css" type="text/css">
         <link rel="icon" href="../static/img/favicon.png"> 
         <script src="https://kit.fontawesome.com/f0df8f6371.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap">
     </head>
 
     <body> 
@@ -19,7 +20,7 @@
                             Home 
                         </a>
                     </li>
-                    <li><a href="#">
+                    <li><a href="#intro">
                             <i class="fa-solid fa-user"></i>                            
                             Intro
                         </a>
@@ -60,34 +61,36 @@
             <div id="divider"> </div>
         </section>
 
-        <!-- <section class="background">
-            <img src="../static/img/ProfilePic.svg" class="pfp">
-            <h2 id="background-hello"> Hello </h2>
-            <p> 
-                I'm Maisha and welcome to my NYC-theme virtual portolio! If you can't tell, I was born and raised in New York City, which has left a large influence on who I am today. 
-                <br> 
-                This portfolio will walk through my skills, experiences, and projects that I have worked on. 
-                <br> 
-                It is currently in the works, so make sure to stop by for updates! 
-                <br> 
-                In the meantime, visit <a>www.github.com/mmiah00</a> to check out some of my work. 
-            </p>
-        </section> -->
-
-        <section class="background">
+        <section class="background" id="intro">
+            <div class="background-hello"> 
+                <h2> &#128075 Hello </h2>
+            </div>
             <div class="background-content">
                 <img src="../static/img/ProfilePic.svg" class="background-pfp">
                 <div class="background-text">
-                    <p>
-                        I'm Maisha and welcome to my NYC-theme virtual portfolio! If you can't tell, I was born and raised in New York City, which has left a large influence on who I am today.
+                    <p id="background-msg1">
+                        I'm Maisha and welcome to my NYC-theme virtual portfolio! 
                         
                         This portfolio will walk through my skills, experiences, and projects that I have worked on.
                         
                         It is currently in the works, so make sure to stop by for updates!
                     </p>
+                    <br> 
+                    <br> 
+                    <div id="background-msg2"> 
+                        <p> 
+                            To check out some of my projects, click the Github icon below: 
+                        <p> 
+                        <br> 
+                        <a href="https://www.github.com/mmiah00" target="_blank" rel="noopener noreferrer">
+                            <i class="fa-brands fa-github" style="color: #ECECEC;"></i>
+                        </a>
+                    </div> 
                 </div>
             </div>
         </section>
+
+          
         
 
         <!-- <section class="experience">
