--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -138,8 +138,22 @@ body {
 .background {
     position: relative;
     background: #000;
-    padding: 100px;
+    padding-top: 200px;
+    padding-bottom: 150px;
 }
+
+.background-hello {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -150%);
+    text-align: center;
+}
+
+.background-hello h2{ 
+    font-size: 4.5em;
+    font-family: 'Dancing Script', cursive;
+    color: #ececee; 
+} 
 
 .background-content {
     display: flex;
@@ -148,19 +162,33 @@ body {
 }
 
 .background-pfp {
-    width: 200px;
-    margin-right: 40px;
+    width: 240px;
+    margin-right: 100px;
 }
 
 .background-text {
-    color: #fff;
+    color: #ececec; 
 }
 
-.background p {
-    font-size: 1em;
+.background-text a {
+    font-size: 40px; /* Adjust the font size to make the icon bigger */
+    align-self: center;
+}
+
+#background-msg1 {
+    font-size: 1.3em;
     font-weight: 300;
     text-align: justify;
     margin-top: 10px; 
+    width: 60vw; 
+}
+
+#background-msg2 {
+    font-size: 1.3em;
+    font-weight: 300;
+    text-align: center;
+    margin-top: 10px; 
+    width: 60vw; 
 }
 
 /* .background { 
